force-app/main/default/objects/iTalentDev__LingotekData__c/iTalentDev__LingotekData__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>LingotekData</label>
</CustomObject>