force-app/main/default/objects/iTalentDev__LingotekData__c/fields/iTalentDev__Lingotek_Access_Token__c.field-meta.xml
<CustomField>
    <fullName>iTalentDev__Lingotek_Access_Token__c</fullName>
    <label>Lingotek Access Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>