force-app/main/default/objects/iTalentDev__LingotekData__c/fields/iTalentDev__Lingotek_Community_Id__c.field-meta.xml
<CustomField>
    <fullName>iTalentDev__Lingotek_Community_Id__c</fullName>
    <label>Lingotek Community Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>