force-app/main/default/objects/iTalentDev__LingotekData__c/fields/iTalentDev__Machine_Translation_Project_Id__c.field-meta.xml
<CustomField>
    <fullName>iTalentDev__Machine_Translation_Project_Id__c</fullName>
    <label>Machine Translation Project Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>